--- a/.html
+++ b/.html
@@ -6,7 +6,7 @@
     <p>
     <h1>Hello World</h1>
     <br>
-    Carlo Miguel San Buenaventura<br>
+     Carl James Abuan Camay<br>
     Pasig Catholic College<br> 
   </body>
 </html>
